Native code compiler test fixes.